add fieldset and button orientation

--- a/contact.html
+++ b/contact.html
@@ -13,33 +13,35 @@
 </header>
 
 <section class="products-offered">
-	<h2>Zuitt IT Solutions</h2>
-	<h3><strong>Products Offered</strong></h3>
+	<fieldset>
+		<h2>Zuitt IT Solutions</h2>
+		<h3><strong>Products Offered</strong></h3>
 
-	<table border="1">
-		<thead>
-			<tr>
-				<th>Package</th>
-				<th>Price</th>
-				<th>Description</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Basic</td>
-				<td>&#8369; 500.00</td>
-				<td>Package includes a fully functional website with desired specifications.</td>
-			</tr>
-			<tr>
-				<td>Premium</td>
-				<td>&#8369; 1000.00</td>
-				<td>Enjoy all the benefits of the basic package and also inclides site support and maintenance</td>
-			</tr>
-			<tr>
-				<th colspan="3">Additional features after initial project is inclusive of charges</th>
-			</tr>
-		</tbody>
-	</table>
+		<table border="1">
+			<thead>
+				<tr>
+					<th>Package</th>
+					<th>Price</th>
+					<th>Description</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Basic</td>
+					<td>&#8369; 500.00</td>
+					<td>Package includes a fully functional website with desired specifications.</td>
+				</tr>
+				<tr>
+					<td>Premium</td>
+					<td>&#8369; 1000.00</td>
+					<td>Enjoy all the benefits of the basic package and also inclides site support and maintenance</td>
+				</tr>
+				<tr>
+					<th colspan="3">Additional features after initial project is inclusive of charges</th>
+				</tr>
+			</tbody>
+		</table>
+	</fieldset>
 	<br/><br/>
 </section>
 
@@ -99,7 +101,7 @@
 
 		<br/><br/>
 		<button type="submit">Send Inquiry</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<br/>
 		<button type="reset">Reset</button>
 	</form>
 </section>
